# aiguard

./: .gitignore  .gitlab-ci.yml  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  STEP_BY_STEP_GUIDE.md  pyproject.toml  session-ses_1735.md  setup.py  verify_versions.py
.aiguard/: aiguard.db  e2e_adversarial.db  e2e_test.db
.github/workflows/: ci.yml  publish.yml
adversarial/: README.md  __init__.py  evolutionary.py  judge.py  language_detection.py  multi_turn.py  mutator.py  schema.py  scoring.py  seed_manager.py  storage.py
adversarial/adapters/: __init__.py  base_adapter.py  csv_adapter.py  example_adapter.py  huggingface_adapter.py  registry.py
adversarial/data/: __init__.py  build_default_dataset.py  core_attacks.json  datasets.json  offline_datasets.json
aiguard/: __init__.py
aiguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aiguard/cli/: __init__.py  config.py  dev_command.py  exit_codes.py  main.py  monitor_command.py  pipeline_command.py  templates.py
aiguard/evaluation/: __init__.py  modules.py  registry.py  services.py
aiguard/sdk/: __init__.py  client.py  dispatcher.py  queue.py
aiguard_adversarial.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aiguard_env/: pyvenv.cfg
aiguard_safety.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cli/: __init__.py  dev_command.py  main.py  monitor_command.py  pdf_report.py  pipeline_command.py  reporting.py  services.py  templates.py
config/: __init__.py  judge_config.py  pipeline_config.py
evaluation/: __init__.py  base.py  model_client.py  modules.py  registry.py
evaluator/: base_test.py  engine.py  execution.py  pipeline.py  registry.py  result.py
hallucination/: consistency_checker.py  context_checker.py  ground_truth_checker.py  hallucination_test.py  judge.py  language_utils.py  modes.py  scoring.py  taxonomy.py  uncertainty_estimator.py
monitoring/: __init__.py
monitoring/api/: __init__.py  routes_metrics.py  routes_review.py  routes_traces.py  server.py
monitoring/services/: __init__.py  metrics_service.py  trace_service.py
monitoring/ui/: index.html  package.json  tailwind.config.js  vite.config.js
monitoring/ui/src/: App.jsx  api.js
monitoring/ui/src/components/: MetricCard.jsx  TraceTable.jsx
monitoring/ui/src/pages/: Dashboard.jsx  ReviewQueue.jsx  TraceDetail.jsx  TraceExplorer.jsx
pipeline/: __init__.py  batch_scheduler.py  evaluation_queue.py  evaluation_worker.py  event_models.py  pipeline_router.py  trace_queue.py  unified_judge.py
review/: __init__.py  calibration_manager.py  cli.py  emailer.py  models.py  queue.py  routes.py  server.py
review/static/: form.css  style.css
review/templates/: dashboard.html  index.html  review_form.html  submitted.html
sdk/: __init__.py  client.py  config.py  dispatcher.py  queue.py  sampling.py  trace.py
storage/: __init__.py  base_backend.py  cli.py  manager.py  migrations.py  models.py  postgres_backend.py  project.py  sqlite_backend.py
tests/: smoke_test.py  test_7_critical_fixes.py  test_cli_report.py  test_cli_template_yaml.py  test_compliance_scoring.py  test_phrase_filter.py  test_rejudge_project_id.py  test_review.py  test_storage_evaluations.py  test_symbol_filtering.py  test_timeout_configuration.py  test_unified_judge.py  test_v0751_fixes.py
