[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiguard"
version = "0.2.0"
description = "AIGuard: model-agnostic safety evaluation toolkit (adversarial, evaluator, hallucination)"
authors = [{ name = "Shelton Mutambirwa", email = "sheltonmutambirwa@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
]
license = "MIT"
keywords = ["llm", "safety", "evaluation", "robustness", "hallucination", "adversarial", "ai", "guardrails"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Shelton03/aiguard"
Source = "https://github.com/Shelton03/aiguard"

[project.optional-dependencies]
huggingface = ["datasets>=2.16.0"]
review = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]
sdk = [
    "litellm>=1.0",
]
monitoring = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
aiguard = "cli.main:app"
aiguard-review = "review.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "aiguard*",
    "cli*",
    "sdk*",
    "evaluation*",
    "adversarial*",
    "evaluator*",
    "hallucination*",
    "storage*",
    "review*",
    "pipeline*",
    "monitoring*",
    "config*",
]
exclude = ["aiguard_env*", "tests*", "*.egg-info*"]

[tool.setuptools.package-data]
"adversarial" = ["py.typed"]
"evaluator"   = ["py.typed"]
"hallucination" = ["py.typed"]
"review"      = ["templates/*.html", "static/*.css"]
