[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiguard-safety"
version = "0.7.5.10"  # Fix false positive attack detection from role prefix matching
description = "AIGuard: model-agnostic safety evaluation toolkit with PDF reports (adversarial, evaluator, hallucination)"
authors = [{ name = "Shelton Mutambirwa", email = "sheltonmutambirwa@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "litellm>=1.0",
    "datasets>=2.16.0",
    "langdetect>=1.0.9",
    "reportlab>=4.0.0",
    # Web framework: pinned to 0.115.x for Starlette 0.x compatibility
    # Starlette 1.x has breaking API changes in TemplateResponse()
    "fastapi>=0.115.0,<0.116.0",
    # Starlette explicitly pinned to 0.38.x (required by FastAPI 0.115.0)
    # Prevents accidental upgrade to 1.x which breaks review UI
    "starlette>=0.38.0,<0.39.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "jinja2>=3.1.0,<4.0.0",
    "python-multipart>=0.0.9,<0.1.0",
]
license = "MIT"
keywords = ["llm", "safety", "evaluation", "robustness", "hallucination", "adversarial", "ai", "guardrails"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Shelton03/aiguard"
Source = "https://github.com/Shelton03/aiguard"

[project.optional-dependencies]
# Deprecated: All dependencies now included in core installation
review = []
sdk = []
monitoring = []

[project.scripts]
aiguard = "cli.main:app"
aiguard-review = "review.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "aiguard*",
    "cli*",
    "sdk*",
    "evaluation*",
    "adversarial*",
    "evaluator*",
    "hallucination*",
    "storage*",
    "review*",
    "pipeline*",
    "monitoring*",
    "config*",
]
exclude = ["aiguard_env*", "tests*", "*.egg-info*"]

[tool.setuptools.package-data]
"adversarial"      = ["py.typed", "data/*.json", "data/*.jsonl"]
"adversarial.data" = ["*.json", "*.jsonl"]
"evaluator"        = ["py.typed"]
"hallucination"    = ["py.typed"]
"review"           = ["templates/*.html", "static/*.css"]
"monitoring"       = ["ui/**", "ui/**/*"]
